--- a/mixturelm.Rmd
+++ b/mixturelm.Rmd
@@ -7,22 +7,35 @@ runtime: shiny
 ---
 
 ```{r, echo=F}
-generateData <- function(k=4, error=0.5, n=100)
+data(iris)
+generateData <- function(k=4, error=0.5, n=100, iris.df=F)
 {
-  slopes <- rnorm(k, 0, 3)
-  intercepts <- rnorm(k, 0, 3)
-  errors <- rnorm(n, 0, error)
+  if(iris.df==F)
+  {    
+    slopes <- rnorm(k, 0, 3)
+    intercepts <- rnorm(k, 0, 3)
+    errors <- rnorm(n, 0, error)
+    
+    x <- data.frame(intercept=rep(1,n), x=rnorm(n, 0, 1), k=rep(1:k, length.out=n), y=NA)
   
-  x <- data.frame(intercept=rep(1,n), x=rnorm(n, 0, 1), k=rep(1:k, length.out=n), y=NA)
-
-  for(ii in 1:k)
-  {
-    x$y[x$k==ii] <- x$intercept[x$k==ii]*intercepts[ii] + x$x[x$k==ii]*slopes[ii]
+    for(ii in 1:k)
+    {
+      x$y[x$k==ii] <- x$intercept[x$k==ii]*intercepts[ii] + x$x[x$k==ii]*slopes[ii]
+    }
+    
+    x$y <- x$y + errors
+    return.value <- list(x, slopes, intercepts)
   }
   
-  x$y <- x$y + errors
+  if(iris.df==T)
+  {
+    x <- iris[,c("Sepal.Length","Petal.Length","Species")]
+    names(x) <- c("x","y","k")
+    x$k <- as.numeric(x$k)
+    return.value <- list(x)
+  }
   
-  return(list(x, slopes, intercepts))
+  return(return.value)
 }
 
 mixlm <- function(formula, data, k, sims=100)
@@ -80,12 +93,13 @@ sidebarPanel(
               animate=animationOptions(interval = 200, loop = FALSE, playButton = NULL, pauseButton = NULL)),
   sliderInput("classes","Classes",min=1,max=5,step=1,value=3),
   sliderInput("error","Error",min=0,max=0.5,step=0.05,value=0.05),
+  checkboxInput("iris","Iris Dataset",F),
   actionButton("refresh", "Refresh")
 )
 
 reactiveStuff <- reactive({
   input$refresh
-  generateData(k=isolate(input$classes), error=isolate(input$error))
+  generateData(k=isolate(input$classes), error=isolate(input$error), iris.df=isolate(input$iris))
 })
 
 renderPlot({
